testdata/baselines/reference/submodule/compiler/checkIndexConstraintOfJavascriptClassExpression.errors.txt
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
weird.js(1,1): error TS2552: Cannot find name 'someFunction'. Did you mean 'Function'?
weird.js(1,23): error TS7006: Parameter 'BaseClass' implicitly has an 'any' type.
weird.js(4,25): error TS8010: Type annotations can only be used in TypeScript files.
weird.js(9,17): error TS7006: Parameter 'error' implicitly has an 'any' type.


!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== weird.js (4 errors) ====
    someFunction(function(BaseClass) {
    ~~~~~~~~~~~~
!!! error TS2552: Cannot find name 'someFunction'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                          ~~~~~~~~~
!!! error TS7006: Parameter 'BaseClass' implicitly has an 'any' type.
        'use strict';
        const DEFAULT_MESSAGE = "nop!";
        class Hello extends BaseClass {
                            ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
            constructor() {
                super();
                this.foo = "bar";
            }
            _render(error) {
                    ~~~~~
!!! error TS7006: Parameter 'error' implicitly has an 'any' type.
                const message = error.message || DEFAULT_MESSAGE;
            }
        }
    });
    